Changed stuff for executable to work